@@ -1,3 +1,9 @@
+2005-03-17  Zoran Vasiljevic  <vasiljevic@users.sf.net>
+
+	* nsd/nsd.h
+	* nsd/unix.h
+	* nsd/nsmain.h: Added watchdog implementation (RFE #1156875)
+
 2005-03-12  Vlad Seryakov <vlad@crystalballinc.com>
 
         * nspd/
